# embedded-rs

./: Readme.md  flake.nix
rp2350/: Cargo.toml
