[package]
name = "rp2350"
version = "0.1.0"
edition = "2021"
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"

defmt = "0.3"
defmt-rtt = "0.4.0"

rp235x-hal = { version = "0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
embassy-rp = { version="0.2.0", git="https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"], git="https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.6.1", features = ["defmt"], git="https://github.com/embassy-rs/embassy"}
embassy-executor = { version = "0.7.0",  features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"], git="https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"], git="https://github.com/embassy-rs/embassy" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
